// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledDuckComponent renders animal 1`] = `
<div
  aria-label="play duck sound button"
  className="sc-bdVaJa jKWUBw"
/>
`;

exports[`StyledDuckComponent renders animalChat 1`] = `
<div
  aria-label="play duck sound button"
  className="sc-bdVaJa WgoNZ"
/>
`;
